GUI Interfaces. (IGui.java, Logging.java) Logging punishments in GUI Interface

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -50,6 +50,17 @@ messages:
   rollback: "&6Вы успешно откатили все наказания от администратора %player%. Наказаний затронуто &a%count%"
   edit: "&6Вы успешно отредактировали наказание для игрока %player%. Данные изменились!"
 
+lore:
+  logging:
+    - ""
+    - "&7> &6Администратор: &f%admin%"
+    - "&7> &6Наказанный: &c%player%"
+    - "&7> &6Дата наказания: &f%date%"
+    - "&7> &6Тип наказания: &e%type%"
+    - "&7> &6Причина: &f%reason%"
+    - ""
+
+
 command-arguments:
   ban:
     - ""
