fix MainCommand. it was possible to access sub arguments without the options key argument
and the system of logging of administrators' actions is implemented

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <dependency>
           <groupId>com.github.stefvanschie.inventoryframework</groupId>
           <artifactId>IF</artifactId>
-          <version>0.10.19</version>
+          <version>LATEST</version>
       </dependency>
   </dependencies>
 </project>
