--- a/src/main/resources/ru/config.yml
+++ b/src/main/resources/ru/config.yml
@@ -31,6 +31,8 @@ warning-messages:
     failed-unban: "&6На данном аккаунте бан от команды проекта, который запрещено снимать!"
     failed-ban: "&6Вы не можете забанить этого игрока"
     exceeded-ban-limit: "&6Вы превысили лимит на максимальный срок блокировки. Ваш лимит: %limit%"
+    empty-logs: "&6Лог наказаний от этого игрока за определённый период времени пуст!"
+    not-permission: "&cУ Вас нет прав для использования этой команды."
 
 safety-messages:
   suspicious-ban-activity: "&4SECURITY: &6Администратор %admin% заблокировал более 5 игроков за короткое время!"
