--- a/src/main/resources/ru/config.yml
+++ b/src/main/resources/ru/config.yml
@@ -27,22 +27,23 @@ warning-messages:
   failed-attempt:
     not-found: "&6Игрок %player% не был найден, так-как никогда не заходил на этот сервер"
     not-banned: "&4Игрок %player% не забанен"
+    not-warned: "&4У игрока %player% нету предупреждений"
     has-already-banned: "&4Игрок %player% уже забанен"
+    has-already-warned: "&4Игрок %player% уже имеет три предупреждения."
     failed-unban: "&6На данном аккаунте бан от команды проекта, который запрещено снимать!"
+    failed-unwarn: "&6На данном аккаунте предупреждение от команды проекта, которое запрещено снимать!"
     failed-ban: "&6Вы не можете забанить этого игрока"
+    failed-warn: "&6Вы не можете предупредить этого игрока"
     exceeded-ban-limit: "&6Вы превысили лимит на максимальный срок блокировки. Ваш лимит: %limit%"
     empty-logs: "&6Лог наказаний от этого игрока за определённый период времени пуст!"
     not-permission: "&cУ Вас нет прав для использования этой команды."
-
-safety-messages:
-  suspicious-ban-activity: "&4SECURITY: &6Администратор %admin% заблокировал более 5 игроков за короткое время!"
-  suspicious-unban-activity: "&4SECURITY: &6Администратор %admin% разблокировал более 5 игроков за короткое время!"
-  suspicious-connection-activity: "&4SECURITY: &6За короткое время произошло более %connections% подключений с одного IP адреса: &a%ip%"
 
 broadcast-messages:
   ban: "&6Игрок %player% был заблокирован администратором %admin% навсегда. Причина: &6[&4%reason%&6]"
   tempban: "&6Игрок %player% был временно заблокирован на %date% &6администратором %admin% Причина: &6[&4%reason%&6]"
   unban: "&6Игрок %player% был разблокирован администратором %admin%."
+  unwarn: "&6Администратор %admin% снял предупреждение с игрока %player%"
+  warn: "&6Администратор %admin% выдал предупреждение игроку %player%. Причина: &6[&4%reason%&6]"
 
 window-messages:
   ban: "&6Вы были забанены на этом сервере администратором %admin% навсегда. Причина: &6[&4%reason%&6]"
@@ -77,6 +78,16 @@ command-arguments:
     - ""
     - "&6 > Снять блокировку с игрока"
     - "&aФормат: &e/unban {PLAYER}"
+    - ""
+  warn:
+    - ""
+    - "&6 > Выдать игроку предупреждение"
+    - "&aФормат: &e/warn {PLAYER} {REASON}"
+    - ""
+  unwarn:
+    - ""
+    - "&6 > Снять с игрока предупреждение"
+    - "&aФормат: &e/unwarn {PLAYER}"
     - ""
   history:
     - ""
