--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,8 @@
-# Этот конфиг используется для настройки плагина. This config is using for configure plugin
+# Этот конфиг используется для настройки плагина.
+# This config is using for configure plugin
 
-database: # Настройки базы данных. Configure database
+database: # Настройки базы данных.
+          # Configure database
   user: "root" # USER
   password: "" # PASSWORD
   name: "minecraft" # NAME DATABASE
@@ -8,8 +10,10 @@ database: # Настройки базы данных. Configure database
   port: 3306 # PORT
 
 settings:
-  locale: "ru" # Локализация плагина. Пока-что есть две версии локализации. (Ru/En) Localizing plugin. (Ru/En)
-  default-reason: "Административный бан!" # Стандартная причина наказания. Default reason punishment.
+  locale: "ru" # Локализация плагина. Пока-что есть две версии локализации.
+               # (Ru/En) Localizing plugin. (Ru/En)
+  default-reason: "Административный бан!" # Стандартная причина наказания.
+                                          # Default reason punishment.
 
 logs-settings:
   delete-log-element:
@@ -17,10 +21,19 @@ logs-settings:
     # ADMIN PRIORITY - Will delete those penalties that have not been issued by the server administrator. (see limits.overrides)
     # ADMIN PRIORITY - удаляет те наказания, которые не были выданы администратором сервера. (см. limits.overrides (ru or en/config.yml)
     # FILTER - NOT REALIZED!
-    storage-time: "30d" # Максимальное время хранения наказания. Maximum retention time of the punishment.
+    storage-time: "30d" # Максимальное время хранения наказания.
+    # Maximum retention time of the punishment.
 
-    # Наказания давностью в 30 дней будут удаляться. Penalties 30 days old will be deleted.
+    # Наказания давностью в 30 дней будут удаляться.
+    # Penalties 30 days old will be deleted.
     # Этот параметр обязательный, для экономии памяти сервера, по-этому, отказаться от этого не возможно.
     # This parameter is mandatory to save server memory, so it is not possible to opt out.
 
-  unloading-delete-elements: false # Будут ли удаленные наказания выгружаться из истории? Will deleted penalties be unloaded from history?
+  unloading-delete-elements: false # Будут ли удаленные наказания выгружаться из истории?
+                                   # Will deleted penalties be unloaded from history?
+
+warn-settings:
+            # После какого количества предупреждений игрок получит наказание.
+  count: 3  # After which number of warnings a player will receive a penalty.
+  penalty-type: "BAN" # Тип наказания, при достижении 3-х предупреждений.
+                      # Type of punishment, when reaching 3 warnings.
